--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
+    ,"build:prod": "node scripts/build-prod.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
